tests/macros/float/choices.rs
fn main() {
    inquisition::questions![float { choices: todo!() }];
}
